# tracethreat-mat

./: '  .gitignore  .gitignore~  .gitmodules  2  673a1e9d-1626-bce1-2ac1e4f5-12bdbb7d.dmp  CMakeLists.txt  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac  configure_ac_cmd.sh  configure_ac_cmd.sh~  hnmav.commit.message.txt  libtool
src/data_structure/: Makefile.am  absalgorithms.hpp  absasciidef.hpp  ac.hpp  ac_matching.hpp  ac_multithread_tbb.hpp  ac_node_tire.cpp  ac_node_tire.hpp  ac_tire.cpp  ac_tire.cpp~  ac_tire.hpp  ac_tire.hpp~  ac_trie.hpp  actire_parallel.cpp  actire_parallel.hpp  arrays_parallel.hpp  gotofn_ocl.cpp  gotofn_ocl.hpp  hashmap_ocl.hpp_backup  ialgorithms.hpp  structdef.hpp  tire.hpp  vector.hpp
src/decompiler/: Makefile.am  decompiler_controller.cpp  decompiler_controller.hpp
src/exception/: Makefile.am  datastructure_exception.cpp  datastructure_exception.hpp  exception_code.cpp  exception_code.hpp  failure_handler_code.cpp  failure_handler_code.hpp  system_exception.cpp  system_exception.hpp  thread_exception.cpp  thread_exception.hpp
src/filetypes/: Makefile.am  binary.hpp  pe.hpp  pe_file_controller.cpp  pe_file_controller.hpp  pe_file_strcontroller.hpp  pe_prescan_controller.cpp  pe_prescan_controller.hpp  pe_template.hpp
src/logger/: Makefile.am  clutil_logger.hpp
src/memory/: Makefile.am  file_shm_base.hpp  file_shm_handler.cpp  file_shm_handler.hpp  monitor_shm.hpp  queue_shm_controller.cpp  queue_shm_controller.hpp  signature_shm_base.hpp  signature_shm_controller.cpp  signature_shm_controller.hpp  signature_shm_controller_map.cpp  signature_shm_controller_map.hpp  signature_shm_controller_mul.cpp  signature_shm_controller_mul.hpp
src/ocl/: CMakeLists.txt  Makefile  Makefile.am  cl_bootstrap.cpp  cl_bootstrap.hpp  cl_handel_memqueue.hpp  cmake_install.cmake  ocl_controller.cpp  oclscanner.hpp  oclscanner_factory.cpp
src/rules/: Makefile.am  arena.c  arena.h  compiler.c  compiler.h  error.txt  exec.c  exec.h  exefiles.c  exefiles.h  filemap.c  filemap.h  grammar.c  grammar.y  hash.c  hash.h  lex.c  lex.h  mem.c  mem.h  parser.c  parser.h  re.c  re.h  result.txt  rules.c  sizedstr.h  utils.c  utils.h  wrapper.cpp  wrapper.hpp  yara.h
src/scan/: .file_scan_policy.cpp.swo  Makefile.am  file_scan_policy.cpp  file_scan_policy.hpp  pe_file_policy.cpp  pe_file_policy.hpp  scan_file_controller.cpp  scan_file_controller.hpp
src/taskconcurrency/: Makefile.am  buffer_sync.hpp  buffer_sync_tbb.cpp  buffer_sync_tbb.hpp  cliprescan_pe_controller.cpp  cliprescan_pe_controller.hpp  cliprescan_pe_task.cpp  cliprescan_pe_task.hpp  tbbpostscan_pe_controller.cpp  tbbpostscan_pe_controller.hpp  tbbpostscan_pe_task.cpp  tbbpostscan_pe_task.hpp
src/test/: .thread_controller_test.hpp.swo  Makefile.am  ac_tire_test.hpp  actire_concurrency_test.hpp  actire_gotofn_ocl_test.hpp  actire_parallel_test.hpp  bloomfilter_concurrency_test.hpp  class_register_helper_test.cpp  class_register_helper_test.hpp  class_register_test.hpp  cli_scanner_wrapper_test.hpp  cliprescan_pe_task_test.hpp  clutil_platform_test.hpp  environment_test.hpp  file_calculate_test.hpp  file_handler_test.hpp  file_offset_handler_test.hpp  file_policy_test.cpp  file_policy_test.hpp  file_shm_handler_test.hpp  md5_hash_test.hpp  options_system_test.hpp  pe_file_controller.hpp  pe_file_controller_test.hpp  queue_shm_controller_test.hpp  resource.cfg  result_infected_test.hpp  scan_pe_file_acp_test.cpp  scan_pe_file_acp_test.hpp  scan_pe_file_actire_parallel_test.hpp  scan_server_connection.hpp  semaphore_controller_test.cpp  semaphore_controller_test.cpp_backup  sigature_shm_controller_test.cpp  signature_shm_controller_test.hpp  system_exception_test.hpp  tbbpostscan_pe_controller_test.hpp  tbbpostscan_pe_task_test.hpp  test_suite  test_suite.cpp  (+8 more)
src/thread/: .exception_handler.cpp.swp  .exception_handler.hpp.swp  CMakeLists.txt  Makefile  config.h  config.h.in  exception_handler.cpp  exception_handler.hpp  exception_handler_test.cpp  thread_sync.cpp  thread_sync.hpp
src/threadconcurrency/: Makefile.am  README.md  TimerController.hpp  buffer_sync_tbb.cpp  buffer_sync_tbb.hpp  buffer_sync_tbb.hpp_backup  cliprescan_pe_controller.cpp  cliprescan_pe_controller.hpp  cliprescan_pe_task.cpp  cliprescan_pe_task.cpp_backup  cliprescan_pe_task.hpp  common_define.hpp  condition_variable.cpp  condition_variable.hpp  monitor_controller.cpp  monitor_controller.hpp  mutex_controller.cpp  mutex_controller.hpp  platformthread_factory.hpp  posixthread_factory.cpp  posixthread_factory.hpp  tbbpostscan_pe_controller.cpp  tbbpostscan_pe_controller.hpp  tbbpostscan_pe_controller.hpp_backup  tbbpostscan_pe_task.cpp  tbbpostscan_pe_task.cpp_backup  tbbpostscan_pe_task.hpp  tbbpostscan_pe_task.hpp_backup  thread.hpp  thread_manager.cpp  thread_manager.hpp  timer_controller.cpp  timer_controller.hpp  util_thread.cpp  util_thread.hpp
src/threadsyncocl/: .platform_thread.hpp.swo  .thread_sync.cpp.swo  Makefile  Makefile.am  Makefile.am_not_phonix  Makefile.in  buffer_sync.cpp  buffer_sync.hpp  buffer_sync.hpp_backup  monitor_controller.cpp  monitor_controller.hpp  mutex.cpp  mutex.hpp  mutex_controller.hpp  platform_thread.hpp  semaphore_controller.cpp  semaphore_controller.hpp  thread_barrier_controller.cpp  thread_barrier_controller.hpp  thread_controller.cpp  thread_controller.hpp  thread_exception.cpp  thread_exception.hpp  thread_manager.cpp  thread_manager.hpp  thread_regis_controller.hpp  thread_sync.cpp  thread_sync.hpp
src/utils/: .file_calculate.cpp.swo  Makefile.am  convert.hpp  cpu_id.hpp  file_calculate.cpp  file_calculate.hpp  file_handler.cpp  file_handler.hpp  file_mem_handler.cpp  file_mem_handler.hpp  file_mem_register.hpp  file_offset_handler.cpp  file_offset_handler.hpp  file_pe_handler.cpp  file_pe_handler.hpp  file_safety_support.hpp  get_process_id_name.hpp  hash.cpp  hash.hpp  md5_hash.cpp  md5_hash.hpp  timestamp.cpp  timestamp.hpp  uuid_generator.cpp  uuid_generator.hpp  verify_signature.cpp  verify_signature.hpp
tmp/: ac.hpp  (+5 more)
(+241 files in other folders)
